--- a/templates/index.html
+++ b/templates/index.html
@@ -31,10 +31,10 @@
 </head>
 <body>
 	<!-- Page Preloder -->
-	<div id="preloder">
+<!-- 	<div id="preloder">
 		<div class="loader"></div>
 	</div>
-
+ -->
 	<!-- Header section -->
 	<header class="header-section">
 		<div class="container">
