--- a/templates/index.html
+++ b/templates/index.html
@@ -7,18 +7,21 @@
 	<meta name="keywords" content="webuni, education, creative, html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Yandex.Metrika counter -->
-		<script type="text/javascript" >
-		   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-		   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-		   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+		<!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
-		   ym(53766010, "init", {
-		        clickmap:true,
-		        trackLinks:true,
-		        accurateTrackBounce:true,
-		        webvisor:true
-		   });
-		</script>
+   ym(53772592, "init", {
+        clickmap:true,
+        trackLinks:true,
+        accurateTrackBounce:true,
+        webvisor:true
+   });
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/53772592" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
 <noscript><div><img src="https://mc.yandex.ru/watch/53766010" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
 	<!-- Favicon -->
@@ -54,9 +57,9 @@
 	<header class="header-section">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-3 col-md-3">
+				<div class="col-lg-4 col-md-4">
 					<div class="site-logo">
-						<img src="static/img/logo.png" alt="">
+						<img src="static/img/logo1.png" alt="">
 					</div>
 					<!-- <div class="nav-switch">
 						<i class="fa fa-bars"></i>
@@ -89,13 +92,14 @@
 				<br><br>
 				<h5>
 				Возможность не только отдохнуть и развлечься,<br> 
-				но и поиграть обучаясь и учиться играя. 
+				но и поиграть обучаясь и учиться играя.<br><br>
+
 				Вас ждут интерактивные мастер-классы,<br> 
 				командные и личные состязания в научно-исследовательском жанре, <br> 
 				знакомство с новинками современной инженерии, <br> 
 				работа с наставниками различных направлений.
 				</h5>
-				<br><br><br><br><br>
+				<br><br><br>
 				</div>
 
 			<div class="row align-centre text-white">
@@ -354,7 +358,7 @@
 					  </ol>
 					  <div class="carousel-inner">
 					    <div class="carousel-item active">
-					      <img class="d-block w-150" src="/static/img/galery/IMG_1125.jpg" alt="First slide">
+					      <img class="d-block w-150" src="/static/img/galery/IMG_1466.jpg" alt="First slide">
 					    </div>
 					    <div class="carousel-item">
 					      <img class="d-block w-150" src="/static/img/galery/IMG_1165.jpg" alt="Third slide">
@@ -381,10 +385,10 @@
 					      <img class="d-block w-100" src="/static/img/galery/IMG_1403.jpg" alt="Third slide">
 					    </div>
 					    <div class="carousel-item">
-					      <img class="d-block w-100" src="/static/img/galery/IMG_1456.jpg" alt="Third slide">
+					      <img class="d-block w-100" src="/static/img/galery/IMG_1125.jpg" alt="Third slide">
 					    </div>
 					    <div class="carousel-item">
-					      <img class="d-block w-100" src="/static/img/galery/IMG_1466.jpg" alt="Third slide">
+					      <img class="d-block w-100" src="" alt="Third slide">
 					    </div>
 					  </div>
 					  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
