--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Yandex.Metrika counter -->
 		<!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
+<!-- <script type="text/javascript" >
    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
    m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
@@ -19,7 +19,8 @@
         accurateTrackBounce:true,
         webvisor:true
    });
-</script>
+</script> -->
+<!-- <script type="text/javascript">!function(){var t=document.createElement("script");t.type="text/javascript",t.async=!0,t.src="https://vk.com/js/api/openapi.js?160",t.onload=function(){VK.Retargeting.Init("VK-RTRG-370134-mRLi"),VK.Retargeting.Hit()},document.head.appendChild(t)}();</script><noscript><img src="https://vk.com/rtrg?p=VK-RTRG-370134-mRLi" style="position:fixed; left:-999px;" alt=""/></noscript> -->
 <noscript><div><img src="https://mc.yandex.ru/watch/53772592" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
 <noscript><div><img src="https://mc.yandex.ru/watch/53766010" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
@@ -85,50 +86,42 @@
 	
 	<!-- Hero section -->
 	<section class="hero-section set-bg" data-setbg="/static/img/DSC00119.jpg">
-		<div class="container row-items ">
-			<div class="hero-text text-white">
+		<div class="container row-items">
+			<div class="hero-text text-white ">
+				<h2 class="mt-5 mb-5">Летняя школа Робин 2019</h2>
+				<!-- <h4>Создавай! Исследуй! Равзлекайся! </h4><br> -->
+				
+				<h4 class="font-italic">Играй обучаясь, учись играя!</h4> <br><br><br><br><br><br><br>
+				<h4>Интерактивная школа научных исследований,<br> IT-технологий, робототехники.</h4>
+			</div>
 
-				<h2 class="mt-5">Летняя школа Робин 2019</h2>
-				<br><br>
-				<h5>
-				Возможность не только отдохнуть и развлечься,<br> 
-				но и поиграть обучаясь и учиться играя.<br><br>
-
-				Вас ждут интерактивные мастер-классы,<br> 
-				командные и личные состязания в научно-исследовательском жанре, <br> 
-				знакомство с новинками современной инженерии, <br> 
-				работа с наставниками различных направлений.
-				</h5>
-				<br><br><br>
-				</div>
-
-			<div class="row align-centre text-white">
-				<div class="col-lg-1"  ></div>
-				<div class="col-lg-2   text-center">
+			<div class="row text-center text-white row-items row-items-mar">
+				<div class="col-lg-1 col-md-0 col-sm-0"></div>
+				<div class="col-lg-2 col-md-6 col-sm-12 text-center">
 					<h1 class="mt-3"> <i class="fa fa-calendar" aria-hidden="true"></i></h1>
 					<h4 class="mt-3">  24 июня - 5 июля</h4>
 				</div>
-				<div class="col-lg-2   text-center">
+				<div class="col-lg-2 col-md-6 col-sm-12 text-center">
 						<h1 class="mt-3"> <i class="fa fa-clock-o" aria-hidden="true"></i></h1>
 						<h4 class="mt-3">с пн по пт</h4>
 						<h4 class="mt-1">с 9:00 до 15:00</h4>
 				</div>
-				<div class="col-lg-2   text-center">
+				<div class="col-lg-2 col-md-6 col-sm-12 text-center">
 					<h1 class="mt-3"> <i class="fa fa-child " aria-hidden="true"></i></h1>
 					<h4 class="mt-3"> Для школьников</h4>
 					<h4 class="mt-1"> 2-11 классы</h4>
 				</div>
-				<div class="col-lg-2   text-center">
+				<div class="col-lg-2 col-md-6 col-sm-12 text-center">
 					<h1 class="mt-3"> <i class="fa fa-map-marker" aria-hidden="true"></i></h1>
 					<h4 class="mt-3">Волжский</h4>
 					<h4 class="mt-1">Ленина 94</h4>
 				</div>
-				<div class="col-lg-2 text-center">
+				<div class="col-lg-2 col-md-12 col-sm-12 text-center">
 					<h1 class="mt-3"> <i class="fa fa-rub" aria-hidden="true"></i></h1>
-					<h4 class="mt-3">Цена:</h4>
-					<h4 class="mt-1">8100 рублей</h4>
+					<h4 class="mt-3">Стоимость:</h4>
+					<h4 class="mt-1">8800 рублей</h4>
 				</div>
-				<div class="col-lg-1"  ></div>
+				<div class="col-lg-1 col-md-0  col-sm-0"></div>
 			</div> 
 		</div>
 	</section>
@@ -143,52 +136,60 @@
 
 
 	<!-- course section -->
-<!-- 	<section class="course-section spad">
+	<section class="course-section spad">
 		<div class="container">
 			<div class="section-title">
-				<h2>Полезная и незабываемая неделя летних каникул для вашего ребенка</h2>
+				<h2> В нашей школе вы получаете возможность не только отдохнуть и развлечься.<br> Вас ждут: </h2>
 			</div>
 		</div>
 
 		<div class="course-warp for-pb">
 			<div class="row course-items-area">
 		
-				<div class="mix col-lg-4 col-md-4 col-sm-6 ">
+				<div class="mix col-lg-3 col-md-3 col-sm-6 ">
 						<div  class="text-center" >
 							<img class = "icon-in-1"src="/static/img/icons/monitorwindow_100640.svg">
 						</div>
 						<h5 class="text-center">
-							10 программ для детей любых возрастов и интересов
+							Интерактивные мастер-классы
 						</h5>
 				</div>
 		
 				
-				<div class="mix col-lg-4 col-md-4 col-sm-6">
+				<div class="mix col-lg-3 col-md-3 col-sm-6">
 
+						<div  class="text-center" >
+							<img class = "icon-in-1"src="/static/img/icons/labscientist_100603.svg">
+						</div>
+						<h5 class="text-center">
+							Командные и личные состязания в научно-исследовательском жанре
+						</h5>
+				</div>
+				<div class="mix col-lg-3 col-md-3 col-sm-6">
+						<div  class="text-center" >
+							<img class = "icon-in-1"src="/static/img/icons/robothand_100650.svg">
+						</div>
+						<h5 class="text-center">
+							Знакомство с новинками современной инженерии
+						</h5>
+					</div>
+					<div class="mix col-lg-3 col-md-3 col-sm-6">
 						<div  class="text-center" >
 							<img class = "icon-in-1"src="/static/img/icons/teachermathsfemale_100635.svg">
 						</div>
 						<h5 class="text-center">
-							Квалифицированные и увлеченные преподаватели
-						</h5>
-				</div>
-				<div class="mix col-lg-4 col-md-4 col-sm-6">
-						<div  class="text-center" >
-							<img class = "icon-in-1"src="/static/img/icons/notredame_100627.svg">
-						</div>
-						<h5 class="text-center">
-							Отдадим дань уважения<br> Нотердаму
+							Работа с наставниками различных направлений
 						</h5>
 					</div>
 			</div>
 		</div>
-	</section> -->
+	</section>
 	<!-- course section end -->
 	<section class="course-section spad">
 		<div class="container">
 			<div class="section-title mb-3">
 				<h2 class ="mb-5">Направления обучения</h2>
-				<h5 class ="mb-5">За 10 дней школы ребята поучавствуют в реализации различных проектов по всем 10 направлениям</h5>
+				<h5 class ="mb-5">За 10 дней школы ребята поучаствуют в реализации различных проектов по всем 10 направлениям</h5>
 			</div>
 		</div>
 		<div class="course-warp">
@@ -210,7 +211,7 @@
 				<div class="mix col-lg-3 col-md-4 col-sm-6 design">
 					<div class="course-item">
 						<div class="course-thumb set-bg" data-setbg="/static/img/courses/alter-eneg.jpg">
-						<div class="price">Альтернативные источники энергии</div>
+						<div class="price">Возобновляемые источники энергии</div>
 						</div>
 					</div>
 				</div>
@@ -387,9 +388,6 @@
 					    <div class="carousel-item">
 					      <img class="d-block w-100" src="/static/img/galery/IMG_1125.jpg" alt="Third slide">
 					    </div>
-					    <div class="carousel-item">
-					      <img class="d-block w-100" src="" alt="Third slide">
-					    </div>
 					  </div>
 					  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
 					    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -468,11 +466,11 @@
 							<div  class="form-group">
 								<input id="phone" class="form-control" name="phone" required  type="text" placeholder="Телефон">
 							</div>
-							<div  class="form-group"><textarea name="comment" id="phone" class="form-control"  type="text" placeholder="Есть вопрос?  Можете написать его здесь."></textarea> </div>
+							<div  class="form-group"><textarea name="comment" id="phone" class="form-control"  type="text" placeholder="Остались вопросы?  Можете задать их здесь."></textarea> </div>
 							 <!-- <div class="checkbox form-check pb-3">	 -->
 						        <label class="form-check-label pl-4" for="check">
 							        <input id="check" class="form-check-input mr-3" checked type="checkbox">
-							        Я добровольно отправляю свои данные
+							        Согласен на обработку персональных данных
 						    	</label>
 						    <!-- </div> -->
 						    <div class = "mt-4"><button  id="button" class="site-btn">Отправить</button></div>
@@ -589,11 +587,11 @@
 						</div>
 						<div class="phone-number">
 							<span>Телефон</span>
-							<h2>+7 904 412 47 97</h2>
+							<h2>+7 904 412 47 96</h2>
 						</div>
 						<ul class="contact-list">
 							<li>Волжский<br>просп. им. Ленина, 74</li>
-							<li>+7 904 412 47 97</li>
+							<li>+7 904 412 47 96</li>
 							<li>lab-robin@yandex.ru</li>
 						</ul>
 						<div class="social-links">
@@ -619,7 +617,7 @@
 		<div class="footer-bottom  mt-0">
 			<div class="footer-warp">
 				<ul class="footer-menu">
-					<li class="mr-3">+7 904 412 47 97</li>
+					<li class="mr-3">+7 904 412 47 96</li>
 					<li>lab-robin@yandex.ru</li>
 					
 				</ul>
