--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,13 @@
 <head>
 	<title>Летняя школа Робин 2019</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="WebUni Education Template">
-	<meta name="keywords" content="webuni, education, creative, html">
+	<meta name="description" content="Лаборатория робин Курсы для детей и школьников в Волжском">
+	<meta name="keywords" content="робототехника, программирование, курсы для детей, волжский, образование">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="yandex-verification" content="816def4d27575ea6" />
 	<!-- Yandex.Metrika counter -->
 		<!-- Yandex.Metrika counter -->
-<!-- <script type="text/javascript" >
+<script type="text/javascript" >
    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
    m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
@@ -19,15 +20,15 @@
         accurateTrackBounce:true,
         webvisor:true
    });
-</script> -->
-<!-- <script type="text/javascript">!function(){var t=document.createElement("script");t.type="text/javascript",t.async=!0,t.src="https://vk.com/js/api/openapi.js?160",t.onload=function(){VK.Retargeting.Init("VK-RTRG-370134-mRLi"),VK.Retargeting.Hit()},document.head.appendChild(t)}();</script><noscript><img src="https://vk.com/rtrg?p=VK-RTRG-370134-mRLi" style="position:fixed; left:-999px;" alt=""/></noscript> -->
+</script>
+<script type="text/javascript">!function(){var t=document.createElement("script");t.type="text/javascript",t.async=!0,t.src="https://vk.com/js/api/openapi.js?160",t.onload=function(){VK.Retargeting.Init("VK-RTRG-370134-mRLi"),VK.Retargeting.Hit()},document.head.appendChild(t)}();</script><noscript><img src="https://vk.com/rtrg?p=VK-RTRG-370134-mRLi" style="position:fixed; left:-999px;" alt=""/></noscript>
 <noscript><div><img src="https://mc.yandex.ru/watch/53772592" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
 <noscript><div><img src="https://mc.yandex.ru/watch/53766010" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
 	<!-- Favicon -->
 	<!-- <link href="/static/img/favicon.ico" rel="shortcut icon"/> -->
- 	<link rel="shortcut icon" href="{{ url_for('static', filename='/static/img/favicon.ico') }}">
+ 	<link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,500,500i,600,600i,700,700i,800,800i" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet"> 
@@ -62,24 +63,22 @@
 					<div class="site-logo">
 						<img src="static/img/logo1.png" alt="">
 					</div>
-					<!-- <div class="nav-switch">
+					<div class="nav-switch">
 						<i class="fa fa-bars"></i>
-					</div> -->
+					</div>
 				</div>
-			<!-- 	<div class="col-lg-9 col-md-9"> -->
-					<!-- <a href="" class="site-btn header-btn">Login</a> -->
-					<!-- <nav class="main-menu d-flex justify-content-end"> -->
-						<!-- <ul> -->
-						<!-- 	<li><a href="index.html">Главная</a></li>
-							<li><a href="#">О нас</a></li>
-							<li><a href="courses.html">Курсы</a></li>
-							<li><a href="blog.html">Новости</a></li>
-							<li><a href="contact.html">Контакты</a></li> -->
-						<!-- </ul> -->
-					<!-- </nav> -->
-				<!-- </div> -->
+				<div class="header-button">
+					
+					<nav class="main-menu d-flex justify-content-end">
+						<ul>	
+							<li ><a href="https://vk.com/ionvpi"><i class="fa fa-vk "></i></a></li>
+							<li ><a href="https://www.instagram.com/lab.robin/"><i class="fa fa-instagram "></i></a></li>
+							<li class = "mb-3"><a href="#bronirovanie" class="">Записаться в школу</a></li>
+						</ul>
+					</nav>
+				</div>
 			</div>
-		</div>
+		</div>	
 	</header>
 	<!-- Header section end -->
 
@@ -337,11 +336,13 @@
 		<div class="section-title">
 			<h2 class ="">Фотогалерея</h2>
 		</div>
-		
+		<!--Carousel Wrapper-->
+
+<!--/.Carousel Wrapper-->
 		<div class = "row">
 			<div class = "col-md-1"></div>
 			<div class = "col-md-10  col-xs-12  align-center">
-				<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+				<div id="carouselExampleIndicators" class="carousel carousel slide carousel-fade z-depth-1-half " data-ride="carousel">
 					  <ol class="carousel-indicators">
 					    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
 					    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -365,28 +366,28 @@
 					      <img class="d-block w-150" src="/static/img/galery/IMG_1165.jpg" alt="Third slide">
 					    </div>
 					    <div class="carousel-item">
-					      <img class="d-block w-100" src="/static/img/galery/IMG_1258.jpg" alt="Third slide">
+					      <img class="d-block w-150" src="/static/img/galery/IMG_1258.jpg" alt="Third slide">
 					    </div>
 					    <div class="carousel-item">
-					      <img class="d-block w-100" src="/static/img/galery/IMG_1283.jpg" alt="First slide">
+					      <img class="d-block w-150" src="/static/img/galery/IMG_1283.jpg" alt="First slide">
 					    </div>
 					    <div class="carousel-item">
-					      <img class="d-block w-100" src="/static/img/galery/IMG_1320.jpg" alt="Second slide">
+					      <img class="d-block w-150" src="/static/img/galery/IMG_1320.jpg" alt="Second slide">
 					    </div>
 					    <div class="carousel-item">
-					      <img class="d-block w-100" src="/static/img/galery/IMG_1349.jpg" alt="Third slide">
+					      <img class="d-block w-150" src="/static/img/galery/IMG_1349.jpg" alt="Third slide">
 					    </div>
 					    <div class="carousel-item">
-					      <img class="d-block w-100" src="/static/img/galery/IMG_1356.jpg" alt="Third slide">
+					      <img class="d-block w-150" src="/static/img/galery/IMG_1356.jpg" alt="Third slide">
 					    </div>
 					    <div class="carousel-item">
-					      <img class="d-block w-100" src="/static/img/galery/IMG_1367.jpg" alt="Second slide">
+					      <img class="d-block w-150" src="/static/img/galery/IMG_1367.jpg" alt="Second slide">
 					    </div>
 					    <div class="carousel-item">
-					      <img class="d-block w-100" src="/static/img/galery/IMG_1403.jpg" alt="Third slide">
+					      <img class="d-block w-150" src="/static/img/galery/IMG_1403.jpg" alt="Third slide">
 					    </div>
 					    <div class="carousel-item">
-					      <img class="d-block w-100" src="/static/img/galery/IMG_1125.jpg" alt="Third slide">
+					      <img class="d-block w-150" src="/static/img/galery/IMG_1125.jpg" alt="Third slide">
 					    </div>
 					  </div>
 					  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -447,14 +448,14 @@
 	</div>
 </section> -->
 
-<section class="signup-section spad">
+<section id = "bronirovanie" class="signup-section spad">
 		<div class="signup-bg set-bg" data-setbg="/static/img/page-bg/bro.jpeg"></div>
 		<div class="container-fluid">
 			<div class="row pb-5">
 				<div class="col-lg-6">
 					<div class="signup-warp">
 						<div class="section-title text-white text-left">
-							<h2>Забронировать место</h2>
+							<h2>Записаться в школу</h2>
 							<p>Оставьте свои контакты и мы с вами свяжемся</p>
 						</div>
 						<!-- signup form -->
@@ -543,7 +544,7 @@
                                         <img class="img-circle" src="/static/img/authors/6.jpg"></div> -->
                                     <div class="col-sm-8">
                                         <p class="otzov">
-                                          Курсы помогают мне развиваться в разных технических направлениях. Я узнал много нового и определился с будущей профессией"
+                                          Курсы помогают мне развиваться в разных технических направлениях. Я узнал много нового и определился с будущей профессией
                                         </p>
                                         <small>Макар, 10 лет</small>
                                     </div>
