--- a/templates/index.html
+++ b/templates/index.html
@@ -59,17 +59,17 @@
 	<header class="header-section">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-4 col-md-4">
+				<div class="col-lg-4 col-md-4 col-sm-12">
 					<div class="site-logo">
 						<img src="static/img/logo1.png" alt="">
 					</div>
-					<div class="nav-switch">
+					<!-- <div class="nav-switch">
 						<i class="fa fa-bars"></i>
-					</div>
+					</div> -->
 				</div>
-				<div class="header-button">
+				<div class="col-lg-3 col-md-3 col-sm-12 header-button">
 					
-					<nav class="main-menu d-flex justify-content-end">
+					<nav class="main-menu">
 						<ul>	
 							<li ><a href="https://vk.com/ionvpi"><i class="fa fa-vk "></i></a></li>
 							<li ><a href="https://www.instagram.com/lab.robin/"><i class="fa fa-instagram "></i></a></li>
