--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 	<meta name="yandex-verification" content="816def4d27575ea6" />
 	<!-- Yandex.Metrika counter -->
 		<!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
+<!-- <script type="text/javascript" >
    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
    m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
@@ -20,8 +20,8 @@
         accurateTrackBounce:true,
         webvisor:true
    });
-</script>
-<script type="text/javascript">!function(){var t=document.createElement("script");t.type="text/javascript",t.async=!0,t.src="https://vk.com/js/api/openapi.js?160",t.onload=function(){VK.Retargeting.Init("VK-RTRG-370134-mRLi"),VK.Retargeting.Hit()},document.head.appendChild(t)}();</script><noscript><img src="https://vk.com/rtrg?p=VK-RTRG-370134-mRLi" style="position:fixed; left:-999px;" alt=""/></noscript>
+</script> -->
+<!-- <script type="text/javascript">!function(){var t=document.createElement("script");t.type="text/javascript",t.async=!0,t.src="https://vk.com/js/api/openapi.js?160",t.onload=function(){VK.Retargeting.Init("VK-RTRG-370134-mRLi"),VK.Retargeting.Hit()},document.head.appendChild(t)}();</script><noscript><img src="https://vk.com/rtrg?p=VK-RTRG-370134-mRLi" style="position:fixed; left:-999px;" alt=""/></noscript> -->
 <noscript><div><img src="https://mc.yandex.ru/watch/53772592" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
 <noscript><div><img src="https://mc.yandex.ru/watch/53766010" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
@@ -289,7 +289,7 @@
 				<img class = "shedule-img" src="/static/img/shediule.png">
 			</div>
 			<div class = "col-md-6  col-xs-12 m-5 pt-4">
-				<table class="table table-striped">
+				<table id="miyazaki" class="table">
 					<tbody>
 					<tr>
 						<td><h5 class="time">9:00 - 9:15</h5></td>
@@ -363,7 +363,7 @@
 					      <img class="d-block w-150" src="/static/img/galery/IMG_1466.jpg" alt="First slide">
 					    </div>
 					    <div class="carousel-item">
-					      <img class="d-block w-150" src="/static/img/galery/IMG_1165.jpg" alt="Third slide">
+					      <img class="d-block w-150" src="/static/img/galery/IMG_1403.jpg" alt="Third slide">
 					    </div>
 					    <div class="carousel-item">
 					      <img class="d-block w-150" src="/static/img/galery/IMG_1258.jpg" alt="Third slide">
@@ -384,7 +384,7 @@
 					      <img class="d-block w-150" src="/static/img/galery/IMG_1367.jpg" alt="Second slide">
 					    </div>
 					    <div class="carousel-item">
-					      <img class="d-block w-150" src="/static/img/galery/IMG_1403.jpg" alt="Third slide">
+					      <img class="d-block w-150" src="/static/img/galery/IMG_1165.jpg" alt="Third slide">
 					    </div>
 					    <div class="carousel-item">
 					      <img class="d-block w-150" src="/static/img/galery/IMG_1125.jpg" alt="Third slide">
@@ -697,7 +697,21 @@
     
     });
 
-});
-	</script>
+});	
+	var headertext = [],
+	headers = document.querySelectorAll("#miyazaki th"),
+	tablerows = document.querySelectorAll("#miyazaki th"),
+	tablebody = document.querySelector("#miyazaki tbody");
+
+	for(var i = 0; i < headers.length; i++) {
+	  var current = headers[i];
+	  headertext.push(current.textContent.replace(/\r?\n|\r/,""));
+	} 
+	for (var i = 0, row; row = tablebody.rows[i]; i++) {
+	  for (var j = 0, col; col = row.cells[j]; j++) {
+	    col.setAttribute("data-th", headertext[j]);
+	  } 
+	}
+</script>
 
 </html>
