--- a/templates/index.html
+++ b/templates/index.html
@@ -95,32 +95,33 @@
 			</div>
 
 			<div class="row text-center text-white row-items row-items-mar">
-				<div class="col-lg-1 col-md-0 col-sm-0"></div>
-				<div class="col-lg-2 col-md-6 col-sm-12 text-center">
+				<div class="col-lg-0 col-md-0 col-sm-0"></div>
+
+				<div class="col-lg-3 col-md-6 col-sm-12 text-center">
 					<h1 class="mt-3"> <i class="fa fa-calendar" aria-hidden="true"></i></h1>
 					<h4 class="mt-3">  24 июня - 5 июля</h4>
 				</div>
-				<div class="col-lg-2 col-md-6 col-sm-12 text-center">
+				<div class="col-lg-3 col-md-6 col-sm-12 text-center">
 						<h1 class="mt-3"> <i class="fa fa-clock-o" aria-hidden="true"></i></h1>
 						<h4 class="mt-3">с пн по пт</h4>
 						<h4 class="mt-1">с 9:00 до 15:00</h4>
 				</div>
-				<div class="col-lg-2 col-md-6 col-sm-12 text-center">
+				<div class="col-lg-3 col-md-6 col-sm-12 text-center">
 					<h1 class="mt-3"> <i class="fa fa-child " aria-hidden="true"></i></h1>
 					<h4 class="mt-3"> Для школьников</h4>
 					<h4 class="mt-1"> 2-11 классы</h4>
 				</div>
-				<div class="col-lg-2 col-md-6 col-sm-12 text-center">
+				<div class="col-lg-3 col-md-6 col-sm-12 text-center">
 					<h1 class="mt-3"> <i class="fa fa-map-marker" aria-hidden="true"></i></h1>
 					<h4 class="mt-3">Волжский</h4>
 					<h4 class="mt-1">Ленина 74</h4>
 				</div>
-				<div class="col-lg-2 col-md-12 col-sm-12 text-center">
+				<!-- <div class="col-lg-2 col-md-12 col-sm-12 text-center">
 					<h1 class="mt-3"> <i class="fa fa-rub" aria-hidden="true"></i></h1>
 					<h4 class="mt-3">Стоимость:</h4>
 					<h4 class="mt-1">8800 рублей</h4>
-				</div>
-				<div class="col-lg-1 col-md-0  col-sm-0"></div>
+				</div> -->
+				<div class="col-lg-0 col-md-0  col-sm-0"></div>
 			</div> 
 		</div>
 	</section>
