--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 	<meta name="yandex-verification" content="816def4d27575ea6" />
 	<!-- Yandex.Metrika counter -->
 		<!-- Yandex.Metrika counter -->
-<!-- <script type="text/javascript" >
+<script type="text/javascript" >
    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
    m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
@@ -20,8 +20,8 @@
         accurateTrackBounce:true,
         webvisor:true
    });
-</script> -->
-<!-- <script type="text/javascript">!function(){var t=document.createElement("script");t.type="text/javascript",t.async=!0,t.src="https://vk.com/js/api/openapi.js?160",t.onload=function(){VK.Retargeting.Init("VK-RTRG-370134-mRLi"),VK.Retargeting.Hit()},document.head.appendChild(t)}();</script><noscript><img src="https://vk.com/rtrg?p=VK-RTRG-370134-mRLi" style="position:fixed; left:-999px;" alt=""/></noscript> -->
+</script> 
+ <script type="text/javascript">!function(){var t=document.createElement("script");t.type="text/javascript",t.async=!0,t.src="https://vk.com/js/api/openapi.js?160",t.onload=function(){VK.Retargeting.Init("VK-RTRG-370134-mRLi"),VK.Retargeting.Hit()},document.head.appendChild(t)}();</script><noscript><img src="https://vk.com/rtrg?p=VK-RTRG-370134-mRLi" style="position:fixed; left:-999px;" alt=""/></noscript> 
 <noscript><div><img src="https://mc.yandex.ru/watch/53772592" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
 <noscript><div><img src="https://mc.yandex.ru/watch/53766010" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
@@ -87,7 +87,7 @@
 	<section class="hero-section set-bg" data-setbg="/static/img/DSC00119.jpg">
 		<div class="container row-items">
 			<div class="hero-text text-white ">
-				<h2 class="mt-5 mb-5">Летняя школа Робин 2019</h2>
+				<h2 class="mt-5 mb-5">Лаборатория инженерного творчества</h2>
 				<!-- <h4>Создавай! Исследуй! Равзлекайся! </h4><br> -->
 				
 				<h4 class="font-italic">Играй обучаясь, учись играя!</h4> <br><br><br><br><br><br><br>
@@ -99,12 +99,12 @@
 
 				<div class="col-lg-3 col-md-6 col-sm-12 text-center">
 					<h1 class="mt-3"> <i class="fa fa-calendar" aria-hidden="true"></i></h1>
-					<h4 class="mt-3">  24 июня - 5 июля</h4>
+					<h4 class="mt-3">  1 октября - 25 мая</h4>
 				</div>
 				<div class="col-lg-3 col-md-6 col-sm-12 text-center">
 						<h1 class="mt-3"> <i class="fa fa-clock-o" aria-hidden="true"></i></h1>
-						<h4 class="mt-3">с пн по пт</h4>
-						<h4 class="mt-1">с 9:00 до 15:00</h4>
+						<h4 class="mt-3">с пн по сб</h4>
+						<h4 class="mt-1">с 09:00 до 20:00</h4>
 				</div>
 				<div class="col-lg-3 col-md-6 col-sm-12 text-center">
 					<h1 class="mt-3"> <i class="fa fa-child " aria-hidden="true"></i></h1>
@@ -139,7 +139,7 @@
 	<section class="course-section spad">
 		<div class="container">
 			<div class="section-title">
-				<h2> В нашей школе вы получаете возможность не только отдохнуть и развлечься.<br> Вас ждут: </h2>
+				<h2> В нашей лаборатрии вы получаете возможность не только отдохнуть и развлечься.<br> Вас ждут: </h2>
 			</div>
 		</div>
 
@@ -297,60 +297,7 @@ for (var i = 0, row; row = tablebody.rows[i]; i++) {
   } 
 }
 </script> -->
-	<section class="shedule-section spad">
-		<div class="container">
-			<div class="section-title mb-4">
-				<h2 class ="mb-4">Расписание дня</h2>
-			</div>
-		</div>
-		<div class = "row mt-5 mr-0">
-			<div class = "col-md-1 "></div>
-			<div class = "col-md-4 col-xs-12">
-				<img class = "shedule-img" src="/static/img/shediule.png">
-			</div>
-			<div class = "col-md-6  col-xs-12 m-5 pt-4">
-				<table id="miyazaki" class="table">
-					<tbody>
-					<tr>
-						<td><h5 class="time">9:00 - 9:15</h5></td>
-						<td><h5>Cбор групп</h5></td>
-					</tr>
-					<tr>
-						<td><h5 class="time">9:15 - 9:40</h5></td>
-						<td><h5>Введение в тематику дня</h5></td>
-					</tr>
-					<tr>
-						<td><h5 class="time">9:40 - 10:40</h5></h5></td>
-						<td><h5> <h5>Занятия по основной программе</h5></h5></td>
-					</tr>
-					<tr>
-						<td><h5 class="time">10:40 - 11:00 </h5></td>
-						<td><h5>Tea Break</h5></td>
-					</tr>
-					<tr>
-						<td><h5 class="time">11:00 - 12:30</h5></td>
-						<td><h5>Занятия по основной программе</h5></td>
-					</tr>
-					<tr>
-						<td><h5 class="time">12:30 - 13:10</h5></td>
-						<td> <h5>Обед</h5></td>
-					</tr>
-					<tr>
-						<td><h5 class="time">13:10 - 14:30</h5></td>
-						<td><h5>Занятия по основной программе</h5></td>
-					</tr>
-					<tr>
-						<td><h5 class="time">14:30 - 15:00</h5></td>
-						<td><h5>Рефлексия (закрепление, выводы)</h5></td>
-					</tr>
-					</tbody>	
-				</table>
-			</div>
-			<!-- <div class = "col-3"></div> -->
-
-		</div>
-	</section>
-<section class="course-section spad mb-5">
+	<section class="course-section spad mb-5">
 	<div class="container">
 
 		<div class="section-title">
@@ -475,7 +422,7 @@ for (var i = 0, row; row = tablebody.rows[i]; i++) {
 				<div class="col-lg-6">
 					<div class="signup-warp">
 						<div class="section-title text-white text-left">
-							<h2>Записаться в школу</h2>
+							<h2>Записаться в лабораторию</h2>
 							<p>Оставьте свои контакты и мы с вами свяжемся</p>
 						</div>
 						<!-- signup form -->
